feat: copy realist process to test module.